--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "haversine": "^1.1.0",
     "html-to-text": "3.2.0",
     "iplocation": "^5.0.0",
+    "jsonwebtoken": "^8.1.0",
     "juice": "4.0.2",
     "lodash": "^4.17.4",
     "moment": "^2.21.0",
@@ -37,7 +38,7 @@
     "passport-local-mongoose": "^4.4.0",
     "pug": "^2.0.0-rc.4",
     "securionpay": "^1.0.0",
-    "jsonwebtoken": "^8.1.0",
+    "socket.io": "^2.0.4",
     "validator": "7.0.0"
   },
   "devDependencies": {
