--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "history": "^4.6.3",
     "react": "^16.0.0",
+    "react-chat-elements": "^0.8.2",
     "react-chatview": "^0.2.5",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.5",
@@ -27,8 +28,10 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-3": "^6.24.1",
+    "css-loader": "^0.28.11",
     "html-webpack-plugin": "^2.26.0",
     "path": "^0.12.7",
+    "style-loader": "^0.20.3",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.8.2"
   }
