--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "dateformat": "^3.0.3",
     "history": "^4.6.3",
-    "react": "^16.0.0",
+    "react": "^16.3.0",
+    "react-bootstrap": "^0.32.1",
     "react-chat-elements": "^0.8.2",
     "react-chatview": "^0.2.5",
-    "react-dom": "^16.0.0",
+    "react-dom": "^16.3.0",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
     "redux": "^3.7.2",
@@ -34,6 +35,18 @@
     "path": "^0.12.7",
     "style-loader": "^0.20.3",
     "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.8.2"
+    "webpack-dev-server": "^2.8.2",
+    "babel-eslint": "^8.0.2",
+    "eslint": "^4.10.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
+    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-sass": "^3.1.0",
+    "npm-run-all": "^4.1.1",
+    "source-map-explorer": "^1.5.0",
+    "prop-types": "^15.6.1"
   }
 }
